@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9114 2005/02/11 16:52:27 agc Exp $
+$NetBSD: CHANGES,v 1.9115 2005/02/12 00:04:50 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -849,3 +849,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated squid to 2.5.8 [taca 2005-02-11]
 	Added pgpool-2.5 [minskim 2005-02-11]
 	Updated audit-packages to 1.33 [agc 2005-02-11]
+	Updated p5-Kwiki-Scode to 0.03 [jlam 2005-02-11]
